--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,79 @@
-tensorflow>=2.10
-streamlit>=1.15
-pandas>=1.5
-matplotlib>=3.6
-opencv-python-headless>=4.6
-kaggle>=1.5
+absl-py==2.1.0
+altair==5.5.0
+astunparse==1.6.3
+attrs==25.1.0
+bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+flatbuffers==25.1.24
+fonttools==4.55.8
+gast==0.6.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.12.1
+idna==3.10
+Jinja2==3.1.5
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+kaggle==1.6.17
+keras==3.8.0
+kiwisolver==1.4.8
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+narwhals==1.24.2
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==23.2
+pandas==2.2.3
+pillow==10.4.0
+protobuf==4.25.6
+pyarrow==19.0.0
+pydeck==0.9.1
+Pygments==2.19.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
+pytz==2025.1
+referencing==0.36.2
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.22.3
+scipy==1.15.1
+setuptools==75.8.0
+six==1.17.0
+smmap==5.0.2
+streamlit==1.32.2
+tenacity==8.5.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow_intel==2.18.0
+termcolor==2.5.0
+text-unidecode==1.3
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
+webencodings==0.5.1
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.2
